# Study_Projects

./: CMakeLists.txt  README.md  main.cpp
Funkcjonalności/: GeneratorLosowy.cpp  GeneratorLosowy.h  Mieszkaniec.cpp  Mieszkaniec.h  Nisza.cpp  Nisza.h  Sasiedztwo.cpp  Sasiedztwo.h  Srodowisko.cpp  Srodowisko.h
Ogólne_ustawienia/: Ustawienia.h  UstawieniaSymulacji.cpp  UstawieniaSymulacji.h
Organizmy/: Bakteria.cpp  Bakteria.h  Glon.cpp  Glon.h  Grzyb.cpp  Grzyb.h  Organizm.cpp  Organizm.h
src/: Main.java
src/Actions/: DownAction.java  LeftAction.java  RightAction.java  SpaceAction.java  UpAction.java
src/Gierka/: Enemy.java  Gra.java  Laser.java  Menu.java  Panel.java  Plane.java  ProgresBar.java
